[package]
name = "gdparser_temp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[dependencies]
base64 = "0.21.0"
libflate = "1.3.0"
quick-xml = "0.27.1"
serde = {version = "1.0.152", features = ["derive"]}
serde_json = "1.0.94"
xorstream = "2.0.2"
